other/e-l/limit-configmap-for-sa/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: limit-configmap-for-sa
policies:
- ../limit-configmap-for-sa.yaml
resources:
- resource.yaml
results:
- kind: ConfigMap
  policy: limit-configmap-for-sa
  resources:
  - any-configmap-name-good
  result: fail
  rule: limit-configmap-for-sa-developer
- kind: ConfigMap
  policy: limit-configmap-for-sa
  resources:
  - any-configmap-name-bad
  result: skip
  rule: limit-configmap-for-sa-developer
variables: variables.yaml
